# TinyStack

./: .gitignore  .gitmodules  README.md  pyproject.toml
bootstrap/: bootstrap.sql
deploy/dev/: Dockerfile.api  docker-compose.yml  nginx.conf
deploy/tinycontainer/: nginx-tinystack.conf  run_all.sh  run_api.sh  run_frontend.sh  run_llm.sh  setup_platform.sh  status.sh  stop_all.sh
deploy/tinycontainer/lib/: common.sh
docs/: architecture.md  learning-path.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ArchitectureTour.tsx  ExplainPanel.tsx  NLQueryPanel.tsx  SQLEditor.tsx
frontend/src/pages/: SQLPlayground.tsx
scripts/: start-api.bat  start-api.sh
services/api/: config.py  main.py
services/api/routes/: ai.py  meta.py  sql.py
services/api/schemas/: models.py
services/api/services/: db_service.py  llm_service.py  trace_service.py  vector_service.py
services/llm_worker/: config.py  main.py
tests/: test_api.py
